test/kubernetes/e2e/features/waypoint/testdata/authz-deny-notcurl-svc-b.yaml
# Please edit the object below. Lines beginning with a '#' will be ignored,
# and an empty file will abort the edit. If an error occurs while saving this file will be
# reopened with the relevant failures.
#
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: authz-deny-notcurl-svc-b
spec:
  action: DENY
  rules:
  - from:
    - source:
        principals: ["cluster.local/ns/waypoint-test-ns/sa/notcurl"]
    to:
    - operation:
        methods: ["GET"]
        ports: ["8080"]
  targetRefs:
  - group: ""
    kind: Service
    name: svc-b
