test/kubernetes/e2e/features/waypoint/testdata/authz-gatewayclass-ref.yaml
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: authz-gatewayclass-ref
spec:
  action: DENY
  rules:
  - to:
    - operation:
        methods: ["GET"]
        ports: ["8080"]
  targetRefs:
  - group: gateway.networking.k8s.io
    kind: GatewayClass
    name: kgateway-waypoint
