test/kubernetes/e2e/features/waypoint/testdata/authz-multi-service.yaml
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: authz-multi-service
spec:
  action: DENY
  rules:
  - to:
    - operation:
        methods: ["GET"]
        ports: ["8080"]
  targetRefs:
  - group: ""
    kind: Service
    name: svc-a
  - group: ""
    kind: Service
    name: svc-b
