test/kubernetes/e2e/features/waypoint/testdata/httproute-gw.yaml
---
# HTTPRoute parented to the Service only affects one chain
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: hr-traversed-waypoint-header
spec:
  parentRefs:
  - name: test-waypoint
  rules:
  - matches:
    - headers:
      - name: "Host"
        value: "svc-a:8080"
    - headers:
      - name: "Host"
        value: "svc-a.waypoint-test:8080"
    - headers:
      - name: "Host"
        value: "svc-a.waypoint-test.svc.cluster.local:8080"
    backendRefs:
    - name: svc-a
      port: 8080
    filters:
    - type: ResponseHeaderModifier
      responseHeaderModifier:
        add:
        - name: "traversed-waypoint"
          value: "true"
  - matches:
    - headers:
      - name: "Host"
        value: "svc-b:8080"
    - headers:
      - name: "Host"
        value: "svc-b.waypoint-test:8080"
    - headers:
      - name: "Host"
        value: "svc-b.waypoint-test.svc.cluster.local:8080"
    backendRefs:
    - name: svc-b
      port: 8080
    filters:
    - type: ResponseHeaderModifier
      responseHeaderModifier:
        add:
        - name: "traversed-waypoint"
          value: "true"
